erDiagram
    USERS ||--o{ SALES : membuat
    SUPPLIERS ||--o{ INVENTORY_ITEMS : memasok
    SUPPLIERS ||--o{ GOODS_RECEIPTS : mencatat
    INVENTORY_ITEMS ||--o{ GOODS_RECEIPTS : diterima
    INVENTORY_ITEMS ||--o{ SALE_ITEMS : dijual
    SALES ||--|{ SALE_ITEMS : memiliki

    USERS {
        bigint id PK
        varchar name
        varchar username UK
        varchar email UK
        timestamp email_verified_at
        varchar password
        varchar remember_token
        timestamp created_at
        timestamp updated_at
    }

    SUPPLIERS {
        bigint id PK
        varchar name UK
        timestamp created_at
        timestamp updated_at
    }

    INVENTORY_CATEGORIES {
        bigint id PK
        varchar name UK
        timestamp created_at
        timestamp updated_at
    }

    INVENTORY_UNITS {
        bigint id PK
        varchar name UK
        timestamp created_at
        timestamp updated_at
    }

    INVENTORY_ITEMS {
        bigint id PK
        varchar sku UK
        varchar name
        varchar category
        varchar unit
        bigint supplier_id FK
        decimal stock
        decimal min_stock
        bigint price
        text description
        timestamp created_at
        timestamp updated_at
    }

    GOODS_RECEIPTS {
        bigint id PK
        bigint inventory_item_id FK
        bigint supplier_id FK
        decimal quantity
        bigint unit_cost
        timestamp received_at
        text note
        timestamp created_at
        timestamp updated_at
    }

    SALES {
        bigint id PK
        varchar invoice_number UK
        bigint user_id FK
        bigint subtotal
        bigint discount
        bigint total
        bigint payment_amount
        bigint change_amount
        timestamp sold_at
        timestamp created_at
        timestamp updated_at
    }

    SALE_ITEMS {
        bigint id PK
        bigint sale_id FK
        bigint inventory_item_id FK
        varchar sku
        varchar item_name
        varchar category
        varchar unit
        decimal quantity
        bigint unit_price
        bigint line_total
        timestamp created_at
        timestamp updated_at
    }
